--- a/InterectiveMenu/style.css
+++ b/InterectiveMenu/style.css
@@ -17,6 +17,7 @@
     font-size: 0;
     box-shadow: none;
     cursor: pointer;
+    border: none;
 }
 
 .c-hamburger:focus {
@@ -34,4 +35,102 @@
     right: 18px;
     height: 8px;
     background: #fff;
+}
+
+
+/* Double the previous element, these two element is still on top of the c-hamburger */
+
+.c-hamburger span::before,
+.c-hamburger span::after {
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 100%;
+    height: 8px;
+    background: #fff;
+    content: "";
+}
+
+
+/* moving one element up */
+
+.c-hamburger span::before {
+    top: -20px;
+}
+
+
+/* moving enother element down */
+
+.c-hamburger span::after {
+    bottom: -20px;
+}
+
+.c-hamburger {
+    background: #cb0032;
+}
+
+.c-hamburger-line span {
+    transition: backgroung 0s 0.3s;
+}
+
+
+/* Animation part */
+
+.c-hamburger span::before,
+.c-hamburger span::after {
+    transition-duration: 0.3s, 0.3s;
+    transition-delay: 0.3, 0s;
+}
+
+.c-hamburger span::before {
+    transition-property: top, transform;
+}
+
+.c-hamburger span::after {
+    transition-property: bottom, transform;
+}
+
+.c-hamburger-line.is-active {
+    background: green;
+}
+
+.c-hamburger-line.is-active span {
+    background: none;
+}
+
+
+/* Rotation */
+
+.c-hamburger-line.is-active span::before {
+    top: 0;
+    transform: rotate(-45deg);
+}
+
+.c-hamburger-line.is-active span::after {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+
+.c-hamburger-line.is-active span::before,
+.c-hamburger-line.is-active span::after {
+    transition-delay: 0s, 0.3s;
+}
+
+#menu {
+    width: 300px;
+    margin-left: -204px;
+    background: #e0baba;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    bottom: 0px;
+    transition: all ease 1s;
+    z-index: 9999;
+}
+
+.container {
+    width: 80%;
+    min-width: 1000px;
+    margin: 30px auto;
+    text-align: center;
 }
