--- a/InterectiveMenu/style.css
+++ b/InterectiveMenu/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    transition: all ease 1s;
+}
+
 .c-hamburger {
     display: block;
     position: absolute;
@@ -128,9 +132,17 @@
     z-index: 9999;
 }
 
+#menu.nav-active {
+    margin-left: 0;
+}
+
 .container {
     width: 80%;
     min-width: 1000px;
     margin: 30px auto;
     text-align: center;
+}
+
+.body-active {
+    margin-left: 300px;
 }
